# eventp

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  release.sh
.github/workflows/: rust.yml
benches/: dispatch.rs
docs/: eventp-ops.add.md  eventp-ops.delete.md  eventp-ops.modify.md  technical.md  technical.zh.md
docs/images/: cpp-vptr.drawio  event-manager.drawio  pointer-meta.drawio  step-2-align-issue-solved.drawio  step-2-align-issue.drawio  step-2.drawio  subscriber-eventp.drawio  type-hierarchy.drawio
examples/: echo-server.rs  mpsc_server.rs  t.rs
src/: bin_subscriber.rs  builder.rs  dyn.rs  event.rs  eventp_like.rs  eventp_ops.rs  interest.rs  interests.rs  lib.rs  mock.rs  pinned.rs  registry.rs  remote_endpoint.rs  subscriber.rs  thin.rs  thinbox.rs  tri_subscriber.rs  utils.rs
src.1/: lib.rs
src.old/: lib.rs  subscriber.rs
