[package]
name = "eventp"
version = "1.0.0-rc.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/FuuuOverclocking/eventp"
authors = ["Fuu g.for.xyz@gmail.com"]
keywords = ["epoll", "event", "event-loop", "linux", "event-manager"]
description = """
A high-performance Linux event loop library built on epoll with type-safe interest registration and flexible event handling
"""

[dependencies]
libc = "0.2"
mockall = { version = "0.13", optional = true }
nix = { version = "0.30", features = ["event"] }
rustc-hash = "2"

[features]
mock = ["dep:mockall"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
