[package]
name = "eventp"
version = "1.0.0-rc.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/FuuuOverclocking/eventp"
authors = ["Fuu g.for.xyz@gmail.com"]
keywords = ["epoll", "event", "event-loop", "linux", "event-manager"]
description = """
Safe Rust abstraction over Linux's `epoll`, offering a true zero-cost event dispatch mechanism.
"""

[dependencies]
libc = "0.2"
mockall = { version = "0.13", optional = true }
nix = { version = "0.30", features = ["event"] }
oneshot = { version = "0.1.11", optional = true }
rustc-hash = "2"

[features]
mock = ["dep:mockall"]
remote-endpoint = ["dep:oneshot"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
debug = true
