[package]
name = "eventp"
version = "1.0.0"
edition = "2021"
rust-version = "1.71"
license = "MIT"
repository = "https://github.com/FuuuOverclocking/eventp"
authors = ["Fuu g.for.xyz@gmail.com"]
keywords = ["epoll", "event", "event-loop", "linux", "event-manager"]
description = """
Safe Rust abstraction over Linux epoll, offering a truly zero-cost event dispatch mechanism.
"""

[dependencies]
libc = "0.2"
mockall = { version = "0.13", optional = true }
nix = { version = "0.31", features = ["event"] }
oneshot = { version = "0.1.12", optional = true }
rustc-hash = "2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
event-manager = "0.4"
mio = { version = "1", features = ["os-poll", "os-ext"] }

[features]
mock = ["dep:mockall"]
remote-endpoint = ["dep:oneshot"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "dispatch"
harness = false

[profile.release]
debug = true

[profile.bench]
lto = true
codegen-units = 1
